Add JPackage distribution to build output