@@ -12,6 +12,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
+        <!-- Fallback platform suffix if no platform specific profile is activated -->
+        <platform.suffix>other</platform.suffix>
+
         <!-- Target JDK version -->
         <jdk.version>11</jdk.version>
 
@@ -26,7 +29,40 @@
         <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
+        <markdown-page-generator-plugin.version>2.4.2</markdown-page-generator-plugin.version>
+        <maven-jlink-plugin.version>3.2.0</maven-jlink-plugin.version>
+        <jpackage-maven-plugin.version>1.6.6</jpackage-maven-plugin.version>
     </properties>
+
+    <profiles>
+        <!-- Windows 64-bit -->
+        <profile>
+            <id>windows-amd64</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <platform.suffix>win-x86_64</platform.suffix>
+            </properties>
+        </profile>
+
+        <!-- Windows 32-bit -->
+        <profile>
+            <id>windows-x86</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                    <arch>x86_32</arch>
+                </os>
+            </activation>
+            <properties>
+                <platform.suffix>win-x86_32</platform.suffix>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -93,6 +129,7 @@
                             <mainClass>com.github.peter277.xml2table.Main</mainClass>
                         </manifest>
                     </archive>
+                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                 </configuration>
             </plugin>
 
@@ -118,10 +155,10 @@
             <plugin>
                 <groupId>com.ruleoftech</groupId>
                 <artifactId>markdown-page-generator-plugin</artifactId>
-                <version>2.4.2</version>
+                <version>${markdown-page-generator-plugin.version}</version>
                 <executions>
                     <execution>
-                        <phase>package</phase>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
@@ -132,44 +169,130 @@
                 </executions>
             </plugin>
 
-            <!-- Assemble distribution -->
+            <!-- Create a custom JRE image using jlink -->
             <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>${maven-assembly-plugin.version}</version>
-            <executions>
-                <execution>
-                <id>make-assembly</id>
-                <phase>package</phase>
-                <goals>
-                    <goal>single</goal>
-                </goals>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jlink-plugin</artifactId>
+                <version>${maven-jlink-plugin.version}</version>
+                <extensions>true</extensions>
+
                 <configuration>
-                    <descriptors>
-                        <descriptor>src/assembly/dist.xml</descriptor>
-                    </descriptors>
+                    <!-- Classify as supplemental artifact -->
+                    <classifier>runtime-image</classifier>
+                    
+                    <!-- Compress resources -->
+                    <compress>zip-6</compress>
+                    
+                    <!-- Strip debug and man pages -->
+                    <stripDebug>true</stripDebug>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <noManPages>true</noManPages>
+
+                    <!-- Create a launcher -->
+                    <!-- <launcher>xml2table=com.github.peter277.xml2table/com.github.peter277.xml2table.Main</launcher> -->
                 </configuration>
-                </execution>
-            </executions>
+
+                <executions>
+                    <execution>
+                        <id>create-runtime-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jlink</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Run jpackage, using runtime pre-generated by custom invocation of JLink -->
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>${jpackage-maven-plugin.version}</version>
+                <configuration>
+                    <type>APP_IMAGE</type>
+                    <name>xml2table</name>
+                    <appVersion>${project.version}</appVersion>
+                    <vendor>com.github.peter277</vendor>
+                    <module>com.github.peter277.xml2table/com.github.peter277.xml2table.Main</module>
+                    <destination>${project.build.directory}/jpackage</destination>
+                    <javaOptions>
+                        <option>--enable-preview</option>
+                    </javaOptions>
+                    <runtimeImage>${project.build.directory}/maven-jlink/classifiers/runtime-image</runtimeImage>
+                    <winConsole>true</winConsole>
+                    <removeDestination>true</removeDestination>
+                </configuration>
+                
+                <executions>
+                    <execution>
+                    <id>create-app-image</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jpackage</goal>
+                    </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Assemble distributions -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly-plugin.version}</version>
+                <executions>
+                    <!-- Execution 1: JAR zip -->
+                    <execution>
+                    <id>make-jar-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                    <configuration>
+                        <descriptors>
+                            <descriptor>src/assembly/jar-zip.xml</descriptor>
+                        </descriptors>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <finalName>${project.artifactId}-${project.version}-bin-jar</finalName>
+                    </configuration>
+                    </execution>
+
+                    <!-- Execution 2: JPackage -->
+                    <execution>
+                    <id>make-jpackage-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                    <configuration>
+                        <descriptors>
+                            <descriptor>src/assembly/jpackage-zip.xml</descriptor>
+                        </descriptors>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <attach>false</attach>
+                        <finalName>${project.artifactId}-${project.version}-bin-${platform.suffix}</finalName>
+                    </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Defines version ignore patterns for scripts/mvn-dep-check.sh, affecting both dependency and plugin updates.
                  These patterns are also passed via the "-Dmaven.version.ignore=" command-line option,
                  but are included here as a reference and placeholder for potential future project-specific rules. -->
             <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>versions-maven-plugin</artifactId>
-              <version>${versions-maven-plugin.version}</version>
-              <configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>${versions-maven-plugin.version}</version>
+                <configuration>
                 <ruleSet>
-                  <ignoreVersions>
+                    <ignoreVersions>
                     <ignoreVersion>
-                      <!-- Ignore any version containing -alpha, -beta, -rc or -M qualifiers -->
-                      <type>regex</type>
-                      <version>(?i).*[-_\.](alpha|beta|rc|M\d).*</version>
+                        <!-- Ignore any version containing -alpha, -beta, -rc or -M qualifiers -->
+                        <type>regex</type>
+                        <version>(?i).*[-_\.](alpha|beta|rc|M\d).*</version>
                     </ignoreVersion>
-                  </ignoreVersions>
+                    </ignoreVersions>
                 </ruleSet>
-              </configuration>
+                </configuration>
             </plugin>
 
         </plugins>
